<resources>
    <string name="app_name">tvsApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_name">Name : </string>
    <string name="title_role">Job Role : </string>
    <string name="title_location">Location : </string>
    <string name="Title_id">Employee Id : </string>
    <string name="title_date">Joining Date : </string>
    <string name="salary">Salary : </string>
</resources>
